# python_playground

./: .gitignore  README.md  Taskfile.yml  double_loop_breakout.py  local_lib.py  log_extracht_top10.py  map_example.py  mypy.ini  mypy_report.xml  pyproject.toml  renovate.json  renovate.json5  requirements-dev.txt  requirements.txt  requirements_pytest_plugins.txt  run  text_parsing_routing_engine.py  text_parsing_sh_ip_route_ospf.py  whatsapp.py
descriptor/: basics.py
divmod_time/: divmod_time.py
files/: apache_logs.txt
grpc_play/: Makefile  greeter_client.py  greeter_server.py  play.proto
log_examples/: basic_with_argparse.py
package_test/: .gitignore  README.md  Taskfile.yml  main.py  pyproject.toml  run
package_test/package_test/: package_test.py
package_test/tests/: test_package_test.py
threading_/: main.py
