[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = "My python playground"
authors = ["Bart Dorlandt <bart@bamweb.nl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textfsm = "^1.1.3"
tabulate = "^0.9.0"
pywhatkit = "^5.4"
grpcio = "^1.59.0"
grpcio-tools = "^1.59.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"
ruff = "^0.0.292"
black = "^23.9.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-ignore = ["F401", "F403", "PLR2004", "D203", "D213", "D407", "D406"]
extend-select = ["I", "C90", "D", "PL", "S"]
extend-exclude = [".git","__pycache__","dist","build",".venv", "test_*"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py311']
