[project]
name = "package-test"
version = "0.1.0"
description = "Test build package"
authors = [{ name = "Bart Dorlandt", email = "bart@bamweb.nl" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest", "mypy", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".git", "__pycache__", "dist", "build", ".venv", "test_*"]

[tool.ruff.lint]
extend-ignore = ["F401", "F403", "PLR2004", "D203", "D213", "D407", "D406"]
extend-select = ["I", "C90", "D", "PL", "S"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
